--- a/assets/css/social.css
+++ b/assets/css/social.css
@@ -1,88 +1,56 @@
 
-.deck {
-	position: absolute;
-  width: 10em;
-  height: 13em;
-	left: 50%;
-	bottom: 200px;
-  margin: +6.5em 0 0 -5em;
-  -webkit-backface-visibility: hidden;
-  font-family: 'Ubuntu', "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  text-align: center;
-  list-style: none;
+.icon {
+    position: absolute;
+    display: inline-block;
+    pointer-events: none;
+    margin-right: .2em;
+    top: 0;
+    min-width: 1.5em;
+    padding: 0.4em;
 }
 
-.deck__item {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  border-radius: .3em;
-  border: 0.1em solid rgba(0, 0, 0, 0.15);
-  box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.3), inset 0 6em 6em rgba(255, 255, 255, 0.1);
-  transform-origin: 90% 92%;
-  transition: .3s;
-}
-.deck__item:hover ~ .deck__item {
-  transform: rotate(120deg);
+.icon > img {
+    pointer-events: auto;
+    width: 1em;
+    line-height: 1em;
 }
 
-.deck__item:last-of-type:after {
-  content: "";
-  position: absolute;
-  left: 90%;
-  top: 92%;
-  border-radius: 50%;
-  width: 1.2em;
-  height: 1.2em;
-  background: white;
-  margin: -.6em 0 0 -.6em;
-  box-shadow: inset 0 1px 1px white, inset 0 -0.3em 0.2em #dddcdb, 0 0 0.6em rgba(0, 0, 0, 0.2);
+.icon > img:hover {
+    width: 1.4em;
 }
 
-.deck__item:last-of-type:before {
-  content: "";
-  position: absolute;
-  right: .4em;
-  bottom: .9em;
-  width: 1.1em;
-  height: .15em;
-  background: silver;
-  background: rgba(0, 0, 0, 0.1);
-  z-index: 2;
+.icon:nth-of-type(1) {
+    left: 0;
 }
 
-.deck__link {
-  display: block;
-  color: white;
-  color: rgba(255, 255, 255, 0.8);
-	font-size: 20px;
+.icon:nth-of-type(1):hover {
+    left: -0.2em;
+    top: -0.2em;
 }
 
-.deck__icon {
-  font-family: 'FontAwesome', sans-serif;
-  font-size: 4em;
-  color: black;
-  color: rgba(0, 0, 0, 0.6);
-  display: block;
-  margin: .5em auto;
+.icon:nth-of-type(2) {
+    left: 2.2em;
 }
 
-.deck__item--facebook {
-  background: #3b5998;
-  transform: rotate(-20deg);
+.icon:nth-of-type(2):hover {
+    left: 2em;
+    top: -0.2em;
 }
 
-.deck__item--github {
-  background: #4183c4;
-  transform: rotate(-5deg);
+.icon:nth-of-type(3) {
+    left: 4.4em;
 }
 
-.deck__item--linkedin {
-  background: #0e76a8;
-  transform: rotate(10deg);
+.icon:nth-of-type(3):hover {
+    left: 4.2em;
+    top: -0.2em;
 }
 
-.deck__item--googleplus {
-  background: #db4a39;
-  transform: rotate(25deg);
+.icon:nth-of-type(4) {
+    left: 6.6em;
+}
+
+.icon:nth-of-type(4):hover {
+    left: 6.4em;
+    top: -0.2em;
 }
